# pconnext-demo

./: .dockerignore  .env.example  .gitignore  .secrets.baseline  Dockerfile  PERFORMANCE.md  README copy.md  README.md  SECURITY.md  alembic.ini  docker-compose.yaml  entrypoint.sh  langgraph.json  main.py  pyproject.toml
agentic/: __init__.py  workflow.py
agentic-chat-ui/: .env.example  .secrets.baseline  Dockerfile  README.md  astro.config.mjs  package.json  tsconfig.json
agentic-chat-ui/.github/actions/argo-sync/: action.yml
agentic-chat-ui/.github/actions/generate-summary/: action.yml
agentic-chat-ui/.github/actions/helm-upgrade/: action.yml
agentic-chat-ui/.github/actions/retention/: action.yml
agentic-chat-ui/.github/actions/secret-scanner/: excluded_files.patterns
agentic-chat-ui/.github/workflows/: builder.yml  commitlint.yml  releaser.yaml
agentic-chat-ui/.husky/: pre-commit
agentic-chat-ui/src/: types.ts
agentic-chat-ui/src/components/: ChatMessage.svelte  HeaderSticky.svelte  InputMessage.svelte
agentic-chat-ui/src/components/input/: ImagePreviewItem.svelte
agentic-chat-ui/src/components/modals/: ContainerModalBase.svelte  DebugContainer.svelte  HelpModal.svelte  HistoryContainer.svelte  ToolDataModal.svelte
agentic-chat-ui/src/components/navigation/: DarkModeButton.svelte  MenuButton.svelte  SessionResetButton.svelte
agentic-chat-ui/src/components/utils/: MarkdownRenderer.svelte  MessageTimestamp.svelte  RobotIcon.svelte
agentic-chat-ui/src/layouts/: Layout.astro
agentic-chat-ui/src/pages/: index.astro
agentic-chat-ui/src/pages/[agent]/: [id].astro  index.astro
agentic-chat-ui/src/styles/: global.css
agentic-chat-ui/src/utils/: XHR.js  auth.ts  constraints.js  messageStore.js  sessionStore.js  staticAssets.ts  stickerStore.js
agentic/components/: checkpoint.py  llm.py  profiler.py  provider.py  workflow.py
agentic/models/: knowledge.py  responsed.py
agentic/prompt_edit/: llm_main_thought.md  llm_main_trusted.md  llm_unused.md
agentic/prompts/: llm_language.md  llm_main_thought.md  llm_main_trusted.md  llm_personality.md  llm_safe.md
agentic/prompts/content-identify/: image.md  sticker.md
agentic/prompts/knowledge/: กระเบื้องปูพื้นและผนัง.txt  กระเบื้องหลังคาคอนกรีต.txt  กระเบื้องหลังคาเซรามิก.txt  กระเบื้องหลังคาไฟเบอร์ซีเมนต์.txt  กระเบื้องโปร่งแสงและแผ่นโปร่งแสง.txt  ก็อก_ซิงค์ล้างจาน.txt  ฉนวนกันความร้อน.txt  ฉนวนกันเสียง.txt  ชุดกระเบื้องระบายอากาศ.txt  ชุดครัวสำเร็จรูป.txt  ตะแกรงกันใบไม้.txt  ถังเก็บน้ำ_ถังบำบัด_ถังดักไขมัน.txt  ที่ไล่นก_ที่กันนก.txt  ท่อ_และอุปกรณ์ประปา.txt  บล็อกปูพื้น_กระเบื้องคอนกรีต_รั้วและอุปกรณ์ตกแต่งสวน.txt  ประตู_หน้าต่าง_และอุปกรณ์.txt  ปั๊มน้ำ.txt  ปูน_ก่อ_ฉาบ_เท.txt  ปูนกาวซีเมนต์.txt  ปูนฉาบ_ปูนลอฟท์_ปูนซีเมนต์ตกแต่ง.txt  ปูนซีเมนต์โครงสร้าง.txt  ปูนเสือมอร์ตาร์_ปูนซีเมนต์สำเร็จรูป.txt  ผนังกันเสียง.txt  ผ้าใบคอนกรีต.txt  รางน้ำ.txt  สินค้าขายดี.txt  สินค้าใหม่.txt  หลังคาเมทัลชีท.txt  หิน_ทราย.txt  อิฐมวลเบา_เคาน์เตอร์มวลเบา.txt  อุปกรณ์ติดตั้งหลังคา.txt  อุปกรณ์ปูกระเบื้องปูพื้นและผนัง.txt  อุปกรณ์เพื่อช่วยให้นอนหลับสบาย.txt  เครื่องใช้ไฟฟ้าและอุปกรณ์ในครัว.txt  เคาน์เตอร์ครัวสำเร็จรูป.txt  เฟอร์นิเจอร์ครัว.txt  เสาเข็ม_แผ่นพื้น_รั้วคอนกรีตสำเร็จรูป.txt  เหล็ก.txt  แนะนำสินค้าหรือบริการ.txt  แผ่นกันเสียง_แผ่นซับเสียง.txt  (+4 more)
agentic/prompts/synonyms/: example.csv
agentic/tools/: __init__.py  calculator.py  faq.py  get_basic_knowledge.py  search_specific_product.py  skim_products.py  switch_agent.py  utils.py
chatapi/: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
chatapi/alembic/: env.py
chatapi/alembic/versions/: 3d3c2f4b8a91_dynamic_prompts.py  85371096002f_index.py  b1e8e7dd2c0e_init.py
chatapi/config/: __init__.py  app.py  logger.py
chatapi/invokes/: __init__.py  checkpoint.py  prediction.py
chatapi/models/: __init__.py  chat.py  files.py  history.py  messages.py  orm.py  policy.py
chatapi/router/: chat.py  files.py  history.py  middleware.py  prompts.py  queries.py  setting.py  utils.py
chatapi/services/: prompts.py
chatapi/workflow/: attachment.py  chat_history.py  transform.py  utils.py
llm_inspector/: workflow.py
postman/: scgdigital-export-and-prompts.postman_collection.json
tests/: healthz.bat  perf_api.js  perf_chat-ui.js  perf_prediction.js  sample.csv  tests_regresstion.csv  tests_regresstion.js
tests/.example/: agentResoning.json  usedTools.json
tests/.example/invoke-messages/: 1.json
tests/.example/invoke-values/: 1.json  2.json
tests/agentic/tools/: tools_test.py
tests/integrate/: chat_test.py  file_test.py  other_test.py
(+6 files in other folders)
