[project]
name = "scg-digital-ai"
version = "2.0-dev"
description = "SCG Digital AI Service (Bobby) - An intelligent conversational agent for SCG Digital building materials, products, and services"
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "alembic>=1.16.5",
    "aiohttp>=3.13.3",
    "async-lru==2.0.5",
    "fastapi[standard]>=0.118.0",
    "httpx>=0.28.1",
    "langchain>=1.3.1,<2.0.0",
    "langchain-community>=0.3.30",
    "langchain-core>=1.3.3",
    "langgraph-checkpoint>=3.0.0",
    "langgraph>=1.2.0,<1.3.0",
    "langsmith>=0.8.0",
    "litellm>=1.83.7",
    "mako>=1.3.12",
    "numexpr>=2.13.0",
    "orjson>=3.11.6",
    "pillow>=12.2.0",
    "psycopg2-binary==2.9.10",
    "pydantic-settings>=2.11.0",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.27",
    "redis>=6.4.0",
    "scalar-doc>=0.1.8",
    "sqlalchemy>=2.0.40",
    "sse-starlette>=2.1.3,<2.2.0",
    "starlette>=0.49.1",
    "toml>=0.10.2",
    "urllib3>=2.7.0",
    "uuid7>=0.1.0",
]

[dependency-groups]
dev = [
    "commit-linter>=1.0.3",
    "pre-commit>=4.3.0",
    "pylance>=0.33.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-httpserver>=1.1.3",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.10",
]

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable `Pyflakes` (`F`) and a subset of the `pycodestyle` (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable `pycodestyle` warnings (`W`) or
# `McCabe` complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "C90"]
extend-select = ["I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

exclude = ["**/.venv", "**/tests"]

[tool.pytest.ini_options]
testpaths = ["./tests/fastapi"]
addopts = ["--cov=.", "--cov-branch", "--cov-config=pyproject.toml"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = ".pytest_cache/coverage.xml"

[tool.coverage.run]
relative_files = true
omit = [
    ".venv/*"
]
